fable/test/valid/scopes_1.f
      program prog
      do ix=1,2
        ix_sum = ix_sum + ix
      enddo
      write(6, *), ix_sum
      end
