fable/test/syntax_error/bad_implied_do_3.f
      program prog
      write(6, *) i,i=1,2
      end
